<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.Scrollbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="org.liuyichen.fifteenyan.fragment.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <TextView
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/settings_title_text_size"
            android:text="@string/preferences" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_settings_vertical_margin"
            android:paddingBottom="@dimen/item_settings_vertical_margin" >

            <TextView
                android:id="@+id/only_wifi_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/settings_title_text_size"
                android:text="@string/only_wifi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/only_wifi_title"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/settings_des_text_size"
                android:text="@string/only_wifi_des" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/only_wifi_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                app:showText="false" />
        </RelativeLayout>

        <TextView
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/settings_title_text_size"
            android:text="@string/other" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_settings_vertical_margin"
            android:paddingBottom="@dimen/item_settings_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/settings_title_text_size"
                android:text="@string/version" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
